--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -24,7 +24,7 @@
 
   <main id="maincontent">
     <section id="map-container" tableindex = "-1">
-      <div id="map" role= "geomap"></div>
+      <map id="map" role= "geomap"></map>
     </section>
     
     <section id = "content">
