--- a/restaurant.html
+++ b/restaurant.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang= "en">
 
 <head>
   <!-- Normalize.css for better cross-browser consistency -->
@@ -32,7 +32,8 @@
   <main id="maincontent" class = "restaurnt-content">
     <!-- Beginning map -->
     <section id="map-container" tableindex = "-1">
-      <div id="map" role="geomap"></div>
+      <map id="map" role="geomap"></map>
+      
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
