gulp updated Scripts Task added

--- a/restaurant.html
+++ b/restaurant.html
@@ -32,7 +32,7 @@
   <main id="maincontent" class = "restaurnt-content">
     <!-- Beginning map -->
     <section id="map-container" tableindex = "-1">
-      <map id="map" role="geomap"></map>
+      <div id="map" role="geomap"></div>
       
     </section>
     <!-- End map -->
