--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <main id="maincontent">
     <section id="map-container" tableindex = "-1">
-      <map id="map" role= "geomap"></map>
+      <div id="map" role= "geomap"></div>
     </section>
     
     <section id = "content">
