--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
     <section id = "content">
 
       <div class="filter-options">
-        <h2 class="result"Filter Results</h2>
+        <h2 class="result">Filter Results</h2>
+        <label for = "neighborhoods-select"></label>
         <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
+        <label for = "cuisines-select"></label>
         <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
           <option value="all">All Cuisines</option>
         </select>
