--- a/restaurant.html
+++ b/restaurant.html
@@ -32,7 +32,7 @@
   <main id="maincontent" class = "restaurnt-content">
     <!-- Beginning map -->
     <section id="map-container" tableindex = "-1">
-      <div id="map" role="geomap"></div>
+      <div id="map" aria-label="map"></div>
       
     </section>
     <!-- End map -->
@@ -59,6 +59,7 @@
   </footer>
   <!-- End footer -->
  
+  
   <script type="application/javascript" charset="utf-8" src="js/lib/index.js"></script>
   
 
