Updated after reviews

--- a/restaurant.html
+++ b/restaurant.html
@@ -60,6 +60,9 @@
             <label >Username:
               <input type="text" name="username" placeholder="username" size="30" maxlength="100" required="required" class = "title">
             </label>
+            <label class = "isfavorite"> Favorite:
+              <input type="checkbox" name="favorite"  size="2" maxlength="3" id= "favorite">
+            </label>
                 
             <div id = "stars" aria-label="Star Rating">
                       
