--- a/restaurant.html
+++ b/restaurant.html
@@ -58,7 +58,7 @@
             <legend>Write a reviews</legend>
               
             <label >Username:
-              <input type="text" name="username" placeholder="username" size="30" maxlength="100" required="required" class = "title">
+              <input type="text" name="username" placeholder="username" size="30" maxlength="100" required="required" class = "title" id= "username">
             </label>
             <label class = "isfavorite"> Favorite:
               <input type="checkbox" name="favorite"  size="2" maxlength="3" id= "favorite">
