--- a/restaurant.html
+++ b/restaurant.html
@@ -5,8 +5,7 @@
   <!-- Normalize.css for better cross-browser consistency -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <!-- Main CSS file -->
+    <!-- Main CSS file -->
   <link rel="stylesheet" href="css/styles.css" type="text/css">
   <title>Restaurant Info</title>
 </head>
@@ -18,7 +17,7 @@
     <nav>
       <h1><a href="/">Restaurant Reviews</a></h1>
        <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" role = "breadcrumb">
+    <ul id="breadcrumb" aria-label = "breadcrumb">
       <li><a href="/">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
@@ -33,7 +32,7 @@
   <main id="maincontent" class = "restaurnt-content">
     <!-- Beginning map -->
     <section id="map-container" tableindex = "-1">
-      <div id="map" role="geomap"></div>
+      <div id="map" aria-label="map"></div>
       
     </section>
     <!-- End map -->
