--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="robots" content="all"/>
   <meta name="robots" content="noindex, follow"/>
-  <meta name="description" content="Google Mobile App Specialist">
+  <meta name="description" content="Google Mobile App Specialist: Restaurant Reviews">
   <meta name="keywords" content="HTML,CSS,XML,JavaScript, Udacity, Google Scholorship">
   <meta name="author" content="Mohamed Risasi">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#ffffff" />
-  
   <title>Restaurant Reviews</title>
 </head>
 
@@ -50,7 +49,7 @@
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
   
-  
+  <script type="application/javascript" charset="utf-8" src="js/lib/idb.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/lib/index.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main/app.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
