--- a/restaurant.html
+++ b/restaurant.html
@@ -2,12 +2,20 @@
 <html lang= "en">
 
 <head>
-  <!-- Normalize.css for better cross-browser consistency -->
+  <meta charset="UTF-8">
+  <title>Restaurant Info</title>
+  <meta name="robots" content="all"/>
+  <meta name="robots" content="noindex, follow"/>
+  <meta name="description" content="Google Mobile App Specialist">
+  <meta name="keywords" content="HTML,CSS,XML,JavaScript, Udacity, Google Scholorship">
+  <meta name="author" content="Mohamed Risasi">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-    <!-- Main CSS file -->
-  <link rel="stylesheet" href="css/styles.css" type="text/css">
-  <title>Restaurant Info</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#ffffff" />
+  <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
+  
 </head>
 
 <body class="inside">
