--- a/restaurant.html
+++ b/restaurant.html
@@ -25,7 +25,7 @@
     <nav>
       <h1><a href="/">Restaurant Reviews</a></h1>
        <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" aria-label = "breadcrumb">
+    <ul id="breadcrumb" aria-label = "breadcrumb" role="application">
       <li><a href="/">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
