Second Phase uploaded

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   </header>
 
   <main id="maincontent">
-    <section id="map-container" tableindex = "-1">
-      <div id="map" aria-label= "map"></div>
+    <section id="map-container" tableindex = "-1" style="width: 100%">
+      <div id="map" aria-label= "map" role="application" style="width: 100%"></div>
     </section>
     
     <section id = "content">
@@ -50,8 +50,7 @@
   </footer>
   
   <script type="application/javascript" charset="utf-8" src="js/lib/idb.js"></script>
-  <script type="application/javascript" charset="utf-8" src="js/lib/index.js"></script>
-  <script type="application/javascript" charset="utf-8" src="js/main/app.js"></script>
+   <script type="application/javascript" charset="utf-8" src="js/main/app.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
 
