--- a/restaurant.html
+++ b/restaurant.html
@@ -25,7 +25,7 @@
     <nav>
       <h1><a href="/">Restaurant Reviews</a></h1>
        <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" aria-label = "breadcrumb" role="application">
+    <ul id="breadcrumb" aria-label = "breadcrumb">
       <li><a href="/">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
@@ -40,7 +40,7 @@
   <main id="maincontent" class = "restaurnt-content">
     <!-- Beginning map -->
     <section id="map-container" tableindex = "-1">
-      <div id="map" aria-label="map"></div>
+      <div id="map" aria-label="map" role="application"></div>
       
     </section>
     <!-- End map -->
