myrestaurants and getData updated

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-  <header>
-    <nav>
+  <header style="width: 100%">
+    <nav style="width: 100%">
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
   </header>
