--- a/restaurant.html
+++ b/restaurant.html
@@ -57,7 +57,7 @@
     <section id="reviews-container">
       <ul id="reviews-list"></ul>
     </section>
-    <!-- End reviews -->
+      <!-- End reviews -->
     <section id = "comment">
 
       <form role="form" action="#" method="post" id ="formcomment"> 
@@ -108,13 +108,10 @@
   </footer>
   <!-- End footer -->
  
-  <script type="application/javascript" charset="utf-8" src="js/lib/index.js"></script>
- 
-  
-
   <!-- Beginning scripts -->
   <!-- Database helpers -->
   <script type="text/javascript" src="js/dbhelper.js"></script>
+  <script type="application/javascript" charset="utf-8" src="js/lib/idb.js"></script>
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
   <!-- Google Maps -->
