--- a/restaurant.html
+++ b/restaurant.html
@@ -18,11 +18,11 @@
   
 </head>
 
-<body class="inside">
+<body class="inside" style="width: 100%">
   <!-- Beginning header -->
-  <header id = "header">
+  <header id = "header" style="width: 100%">
     <!-- Beginning nav -->
-    <nav>
+    <nav style="width: 100%">
       <h1><a href="/">Restaurant Reviews</a></h1>
        <!-- Beginning breadcrumb -->
     <ul id="breadcrumb" aria-label = "breadcrumb">
@@ -68,7 +68,7 @@
               <input type="text" name="username" placeholder="username" size="30" maxlength="100" required="required" class = "title" id= "username">
             </label>
             <label class = "isfavorite"> Favorite:
-              <input type="checkbox" name="favorite"  size="2" maxlength="3" id= "favorite">
+              <input type="checkbox" name="favorite"  size="5" maxlength="3" id= "favorite">
             </label>
                 
             <div id = "stars" aria-label="Star Rating">
