--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 </head>
 
 <body>
-  <header style="width: 100%">
-    <nav style="width: 100%">
+  <header>
+    <nav>
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
   </header>
 
   <main id="maincontent">
-    <section id="map-container" tableindex = "-1" style="width: 100%">
-      <div id="map" aria-label= "map" role="application" style="width: 100%"></div>
+    <section id="map-container" tableindex = "-1">
+      <div id="map" aria-label= "map" role="application"></div>
     </section>
     
     <section id = "content">
