--- a/restaurant.html
+++ b/restaurant.html
@@ -18,11 +18,11 @@
   
 </head>
 
-<body class="inside" style="width: 100%">
+<body class="inside">
   <!-- Beginning header -->
-  <header id = "header" style="width: 100%">
+  <header id = "header">
     <!-- Beginning nav -->
-    <nav style="width: 100%">
+    <nav>
       <h1><a href="/">Restaurant Reviews</a></h1>
        <!-- Beginning breadcrumb -->
     <ul id="breadcrumb" aria-label = "breadcrumb">
