--- a/myrestaurant.html
+++ b/myrestaurant.html
@@ -57,7 +57,7 @@
       <ul id="reviews-list"></ul>
     </section>
     <section id="favorite-container" class = "box">
-        <div class="favarite-items" style="display: flex;">
+        <div class="favarite-items" style="display: flex; justify-content: space-between; align-items: center; width: 270px; ">
                
              <span style="font-size: 20px;"> Is it your favorite?</span> 
 
